fix: update overflow property & shadows

--- a/src/components/Stepper/Stepper.module.scss
+++ b/src/components/Stepper/Stepper.module.scss
@@ -7,7 +7,7 @@
   margin: 20px auto;
   padding: 0 20px;
   position: relative;
-  overflow: scroll;
+  overflow-x: auto;
 }
 
 .step {
